--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,7 @@
   </head>
 
   <body>
-  <% if logged_in? %> <%= render 'shared/header' %>
-    <% else %>
-    <%= render 'shared/before_login_header' %>
-    <% end %>
+    <%= render 'shared/header' %>
     <%= yield %>
   </body>
 </html>
